Fixed wrapping titles

--- a/src/App.scss
+++ b/src/App.scss
@@ -88,9 +88,14 @@ html {
 
                     div {
                         margin: 10px 0;
+                        width: 250px;
+                        max-width: 40vw;
 
                         h3 {
                             margin: 10px 0 0 0;
+                            white-space: nowrap;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
                         }
 
                         p {
